# Aiml

./: README.md
aml-fraud-intelligence/: .env.example  .gitignore  README.md  pyproject.toml
aml-fraud-intelligence/backend/api/: auth.py  dependencies.py  main.py  store.py
aml-fraud-intelligence/backend/api/models/: account.py  risk_event.py  transaction.py
aml-fraud-intelligence/backend/api/routers/: copilot.py  graph.py  reports.py  risk.py  transactions.py
aml-fraud-intelligence/backend/api/routes/: alerts.py  graph.py  transactions.py
aml-fraud-intelligence/backend/core/: config.py  logging.py  security.py
aml-fraud-intelligence/backend/data_simulation/: aml_patterns.py  normal_transactions.py  schema.py  seed.py
aml-fraud-intelligence/backend/db/migrations/: 001_initial.sql
aml-fraud-intelligence/backend/db/neo4j/: driver.py  queries.py
aml-fraud-intelligence/backend/db/redis/: cache.py  client.py  keys.py
aml-fraud-intelligence/backend/db/snowflake/: models.py  session.py  snowpark.py
aml-fraud-intelligence/backend/db/snowflake/migrations/: V001__create_accounts.sql  V002__create_transactions.sql  V003__create_risk_events.sql  (+1 more)
aml-fraud-intelligence/backend/db/supabase/: client.py
aml-fraud-intelligence/backend/genai/: copilot.py  prompts.py  rag.py  sar_generator.py
aml-fraud-intelligence/backend/graph/: cycle_detection.py  graph_builder.py  graph_features.py  layering_detection.py  mule_detection.py  queries.py  scorer.py  seed_fixture.py
aml-fraud-intelligence/backend/kafka/: producer.py  serde.py  topics.py
aml-fraud-intelligence/backend/kafka/consumers/: alert_dispatcher.py  graph_sync.py  ml_scorer.py  runner.py  snowflake_writer.py
aml-fraud-intelligence/backend/ml/: anomaly_detection.py  feature_engineering.py  features.py  risk_classifier.py  risk_scorer.py  scorer.py  train.py
aml-fraud-intelligence/backend/reports/: pdf_generator.py
aml-fraud-intelligence/backend/reports/templates/: report.html
aml-fraud-intelligence/dashboard/: Home.py  api_client.py  app.py
aml-fraud-intelligence/dashboard/pages/: 1_Explorer.py  1_Overview.py  2_Graph.py  2_Transaction_Explorer.py  3_Graph_Investigation.py  4_Risk_Heatmaps.py  5_Timeline_Replay.py  6_Copilot_Chat.py  7_Evidence_Reports.py
aml-fraud-intelligence/dashboard/utils/: api_client.py
aml-fraud-intelligence/docker/: Dockerfile.backend  Dockerfile.dashboard  docker-compose.yml
aml-fraud-intelligence/tests/integration/: test_api_health.py
aml-fraud-intelligence/tests/unit/: test_aml_patterns.py  test_api.py  test_feature_engineering.py  test_graph.py  test_ml.py  test_risk_scorer.py  test_simulation.py
