[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aml-fraud-intelligence"
version = "0.1.0"
description = "AI-Powered AML & Fraud Intelligence Platform"
requires-python = ">=3.11"

[project.optional-dependencies]
backend = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "snowflake-sqlalchemy>=1.5.3",
    "snowflake-connector-python[pandas]>=3.10.0",
    "snowflake-snowpark-python>=1.18.0",
    "redis[hiredis]>=5.0.4",
    "neo4j>=5.20.0",
    "confluent-kafka>=2.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
]
ml = [
    "scikit-learn>=1.4.2",
    "xgboost>=2.0.3",
    "shap>=0.45.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "joblib>=1.4.2",
]
simulation = [
    "faker>=25.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
]
genai = [
    "langchain>=0.2.5",
    "langchain-google-genai>=1.0.6",
    "langchain-openai>=0.1.8",
    "langchain-community>=0.2.5",
    "chromadb>=0.5.3",
    "tiktoken>=0.7.0",
]
reports = [
    "weasyprint>=62.3",
    "jinja2>=3.1.4",
    "pillow>=10.3.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pyvis>=0.3.2",
    "streamlit-extras>=0.4.2",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
