[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-fraud-intelligence"
version = "0.1.0"
description = "Production-grade AML detection platform — Kafka, Redis, Neo4j, XGBoost, Supabase"
requires-python = ">=3.11"
dependencies = [
    "faker>=25.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "confluent-kafka>=2.4.0",
    "redis[hiredis]>=5.0.4",
    "neo4j>=5.20.0",
    "asyncpg>=0.29.0",
    "xgboost>=2.0.3",
    "shap>=0.45.1",
    "scikit-learn>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
asyncio_mode = "auto"
